--- a/public/js/components/blog/blogItem/blogItem.html
+++ b/public/js/components/blog/blogItem/blogItem.html
@@ -2,15 +2,21 @@
 <blog-item-menu ng-if="$ctrl.editable" user="$ctrl.user" edit-mode="$ctrl.editMode" on-undo="$ctrl.undo()" on-edit="$ctrl.editMode = !$ctrl.editMode" on-delete="$ctrl.delete()" on-save="$ctrl.save()" />
 <div class="col s12 m4">
     <div class="card">
-    
+
         <!-- In general if it's not editable it's when this component is used in the blogList component -->
         <div class="card-content">
             <!-- Display post.title if this component is not editable or editable and not in edit mode -->
             <span class="card-title" ng-if="(!$ctrl.editable || ($ctrl.editable && !$ctrl.editMode))">
-              {{$ctrl.post.title}}
+                {{$ctrl.post.title}}
             </span>
+            <div ng-if="(!$ctrl.editable || ($ctrl.editable && !$ctrl.editMode))">
+                Publié le {{$ctrl.post.creation| date:'dd MM yyyy'}}         
+            </div>
             <!-- Display input for editing post.title only if editable and in edit mode -->
             <input type="text" ng-if="($ctrl.editable && $ctrl.editMode)" ng-model="$ctrl.post.title" placeholder="Title">
+
+            <input type="date" ng-if="($ctrl.editable && $ctrl.editMode)" 
+            ng-model="$ctrl.post.creation" placeholder="Date of publication (DD/MM/YYYY)">
             <!-- Display post.content if this component is not editable or editable and not in edit mode -->
             <div ng-if="(!$ctrl.editable || ($ctrl.editable && !$ctrl.editMode))">
                 {{$ctrl.post.content | limitTo: ($ctrl.editable ? $ctrl.post.content.length : 110)}}
