--- a/public/js/components/blog/blogItem/blogItem.html
+++ b/public/js/components/blog/blogItem/blogItem.html
@@ -17,27 +17,35 @@
 
             <input type="date" ng-if="($ctrl.editable && $ctrl.editMode)" 
             ng-model="$ctrl.post.creation" placeholder="Date of publication (DD/MM/YYYY)">
-            <!-- Display post.content if this component is not editable or editable and not in edit mode -->
-            <div ng-if="(!$ctrl.editable || ($ctrl.editable && !$ctrl.editMode))">
-                {{$ctrl.post.content | limitTo: ($ctrl.editable ? $ctrl.post.content.length : 110)}}
-            </div>
-            <!-- Display textarea for editing post.content only if editable and in edit mode -->
-            <textarea class="materialize-textarea" ng-if="($ctrl.editable && $ctrl.editMode)" ng-model="$ctrl.post.content" placeholder="Content"></textarea>
+            <div class="switch" ng-if="($ctrl.editable && $ctrl.editMode)">
+                <label>
+                  Off
+                  <input type="checkbox"  ng-model="$ctrl.post.published">
+                  <span class="lever"></span>
+                  On
+              </label>
+          </div>
+          <!-- Display post.content if this component is not editable or editable and not in edit mode -->
+          <div ng-if="(!$ctrl.editable || ($ctrl.editable && !$ctrl.editMode))">
+            {{$ctrl.post.content | limitTo: ($ctrl.editable ? $ctrl.post.content.length : 110)}}
         </div>
-
-        <div class="card-action">
-            <!-- Display this link, only if it's not editable, to change state to blog.item with the post id -->
-            <a ng-if="!$ctrl.editable" ui-sref="blog.item({id: $ctrl.post._id})">Read more</a>
-            <!-- Display this link, only if it's editable and not in edit mode, to change state to app.blog.list (go back) -->
-            <a ng-if="$ctrl.editable && !$ctrl.editMode" ui-sref="blog.list">Close</a>
-            <!-- Display these links, only if it's in edit mode  -->
-            <a ng-if="$ctrl.editMode" ng-click="$ctrl.undo()" class="waves-effect"><i class="material-icons">undo</i></a>
-            <a ng-if="$ctrl.editMode" ng-click="$ctrl.save()" class="waves-effect"><i class="material-icons">done</i></a>
-            <!-- On click add or remove to bookmark this post -->
-            <a href="" ng-click="$ctrl.addOrRemoveToBookmark()" ng-if="$ctrl.user && !$ctrl.post.isNew">
-                <!-- Change icon from post.isFav value -->
-                <i class="material-icons pull-right">{{($ctrl.isFav() ? 'turned_in' : 'turned_in_not')}}</i>
-            </a>
-        </div>
+        <!-- Display textarea for editing post.content only if editable and in edit mode -->
+        <textarea class="materialize-textarea" ng-if="($ctrl.editable && $ctrl.editMode)" ng-model="$ctrl.post.content" placeholder="Content"></textarea>
     </div>
+
+    <div class="card-action">
+        <!-- Display this link, only if it's not editable, to change state to blog.item with the post id -->
+        <a ng-if="!$ctrl.editable" ui-sref="blog.item({id: $ctrl.post._id})">Read more</a>
+        <!-- Display this link, only if it's editable and not in edit mode, to change state to app.blog.list (go back) -->
+        <a ng-if="$ctrl.editable && !$ctrl.editMode" ui-sref="blog.list">Close</a>
+        <!-- Display these links, only if it's in edit mode  -->
+        <a ng-if="$ctrl.editMode" ng-click="$ctrl.undo()" class="waves-effect"><i class="material-icons">undo</i></a>
+        <a ng-if="$ctrl.editMode" ng-click="$ctrl.save()" class="waves-effect"><i class="material-icons">done</i></a>
+        <!-- On click add or remove to bookmark this post -->
+        <a href="" ng-click="$ctrl.addOrRemoveToBookmark()" ng-if="$ctrl.user && !$ctrl.post.isNew">
+            <!-- Change icon from post.isFav value -->
+            <i class="material-icons pull-right">{{($ctrl.isFav() ? 'turned_in' : 'turned_in_not')}}</i>
+        </a>
+    </div>
+</div>
 </div>
